added config selection screen